force-app/main/default/objects/IdeaArticle__c/IdeaArticle__c.object-meta.xml
<CustomObject>
    <description>Junction object between Idea and Knowledge Articles</description>
    <label>IdeaArticle</label>
    <nameField>
        <label>IdeaArticle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdeaArticles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>