force-app/main/default/objects/IdeaArticle__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related cases</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>IdeaArticles</relationshipLabel>
    <relationshipName>IdeaArticles</relationshipName>
    <type>Lookup</type>
</CustomField>