force-app/main/default/objects/IdeaArticle__c/fields/Idea_Innohub__c.field-meta.xml
<CustomField>
    <fullName>Idea_Innohub__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Id of the Idea associated with KnowledgeArticle</description>
    <label>Idea (Innohub)</label>
    <referenceTo>innohub__Innovation_Idea__c</referenceTo>
    <relationshipLabel>IdeaArticles</relationshipLabel>
    <relationshipName>Ideas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>