force-app/main/default/objects/IdeaArticle__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ID of the KnowledgeArticle associated with the Idea.</description>
    <label>Knowledge</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>IdeaArticles</relationshipLabel>
    <relationshipName>IdeaArticles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>